Begun rest end point creation

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,13 +17,11 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<title>Spring Security Example</title>
+<title>Home</title>
 </head>
 <body>
-	<h1>Welcome!</h1>
-
-	<p>
-		Click <a th:href="@{/quiz}">here</a> to see a greeting.
-	</p>
+	<h1>
+		Head to <a href="/codeIn">here to start</a>
+	</h1>
 </body>
 </html>
